--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,20 @@
-pandas
-numpy
+pandas~=2.2.0
+numpy~=1.25.2
 pydantic
 pydantic_settings
 pandas_profiling
 ydata-profiling
 Pyarrow
-scikit-learn
-shapely
-geopandas
+scikit-learn~=1.4.1.post1
+shapely~=2.0.3
+geopandas~=0.14.3
 pygeos
 pyshp
 descartes
 rtree
-matplotlib
-
+matplotlib~=3.8.3
+scipy~=1.11.4
+catboost~=1.2.3
+lightgbm~=4.3.0
+seaborn~=0.12.2
+xgboost~=2.0.3
